test/logs.txt
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:152:81: error: 'this' argument to member function 'minimum' has type 'const ft::set<int, std::__1::less<int>, std::__1::allocator<int> >', but function is not marked const
        const_iterator          begin()     const   {__INFOIT__ return iterator(this->minimum(this->_root), this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:438:48: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                               ^
../set_tests/../../../set.tpp:452:102: note: in instantiation of function template specialization 'ft::operator<<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                 ^
../set_tests/../system/../../../red_black_tree.tpp:104:15: note: 'minimum' declared here
        Node* minimum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:156:81: error: 'this' argument to member function 'maximum' has type 'const ft::set<int, std::__1::less<int>, std::__1::allocator<int> >', but function is not marked const
        const_iterator          end()       const   {__INFOIT__ return iterator(this->maximum(this->_nul), this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:438:61: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                                            ^
../set_tests/../../../set.tpp:452:102: note: in instantiation of function template specialization 'ft::operator<<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                 ^
../set_tests/../system/../../../red_black_tree.tpp:97:15: note: 'maximum' declared here
        Node* maximum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:152:81: error: 'this' argument to member function 'minimum' has type 'const ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >', but function is not marked const
        const_iterator          begin()     const   {__INFOIT__ return iterator(this->minimum(this->_root), this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:438:48: note: in instantiation of member function 'ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                               ^
../set_tests/../../../set.tpp:452:102: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                                                                                           ^
../set_tests/../system/../../../red_black_tree.tpp:104:15: note: 'minimum' declared here
        Node* minimum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:156:81: error: 'this' argument to member function 'maximum' has type 'const ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >', but function is not marked const
        const_iterator          end()       const   {__INFOIT__ return iterator(this->maximum(this->_nul), this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:438:61: note: in instantiation of member function 'ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                                            ^
../set_tests/../../../set.tpp:452:102: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                                                                                           ^
../set_tests/../system/../../../red_black_tree.tpp:97:15: note: 'maximum' declared here
        Node* maximum(Node* node) {
              ^
4 errors generated.
/system/../../../red_black_tree.tpp:481:9: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
        rbtiterator() : _node(nullptr), _tree(nullptr){};
        ^
In file included from ../set_tests/equal_range().cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:329:66: error: no matching conversion for functional-style cast from 'ft::nodeSet<int> *' to 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::const_iterator' (aka 'const rbtiterator<int>')
        const_iterator lower_bound(const Key &key) const {return const_iterator(this->greater_or_equal(key, this->_comp));};
                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../set_tests/../../../set.tpp:335:30: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::lower_bound' requested here
            iterator save =  lower_bound(key);
                             ^
../set_tests/../../../set.tpp:317:52: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::upper_bound' requested here
            return ft::make_pair(lower_bound(key), upper_bound(key));
                                                   ^
../set_tests/equal_range().cpp:37:83: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::equal_range' requested here
    const _pair<_set<int>::const_iterator , _set<int>::const_iterator>& pair = st.equal_range(10);
                                                                                  ^
../set_tests/equal_range().cpp:52:68: note: in instantiation of function template specialization 'equal_range_test<int>' requested here
    exit(run_set_unit_test<int>("equal_range()", equal_range_test, equal_range_test));
                                                                   ^
../set_tests/../system/../../../red_black_tree.tpp:485:9: note: candidate constructor not viable: no known conversion from 'ft::nodeSet<int> *' to 'const ft::rbtiterator<int>' for 1st argument
        rbtiterator(const rbtiterator &other) : _node(other._node) , _tree(other._tree){};
        ^
../set_tests/../system/../../../red_black_tree.tpp:481:9: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
        rbtiterator() : _node(nullptr), _tree(nullptr){};
        ^
../set_tests/../system/../../../red_black_tree.tpp:483:18: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
        explicit rbtiterator(Node* tmp, ft::RedBlackTree<Key, Node>* _tree) : _node(tmp), _tree(_tree){};
                 ^
6 errors generated.
